--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
+    "material-design-icons": "^3.0.1",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
